kaggle submission notebook

--- a/HPART.ipynb
+++ b/HPART.ipynb
@@ -2026,7 +2026,7 @@
    "source": [
     "### Creating submission files\n",
     "\n",
-    "##### In our previous notebook we created 3 submissions - the third of which performed the best. We chose to follow the same method in this attempt but, at the end, the best model produced the best results"
+    "##### In our previous notebook we created 3 submissions - the third of which performed the best. We chose to follow the same method in this attempt and, at the end, the averaged model produced the best results."
    ]
   },
   {
